# asterisk-g72x

./: .gitignore  .hgignore  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  astconv.c  autogen.sh  build-astconv.sh  build-ipp.sh  build-itu.sh  codec_g72x.c  config.h.in  configure  configure.ac  format_g723.c  format_g723.diff  g723_slin_ex.h  g729_slin_ex.h  slin_g72x_ex.h
ipp/: aux_fnxs.h  aux_tbls.c  decg723.c  decg729.c  decg729fp.c  encg723.c  encg729.c  encg729fp.c  g723api.h  g723ipp.h  g729api.h  g729fpapi.h  owng723.c  owng723.h  owng729.c  owng729.h  owng729fp.c  owng729fp.h  scratchmem.h  vadg723.c  vadg723.h  vadg729.c  vadg729.h  vadg729fp.c  vadg729fp.h
itu/g.723.1a/: basop.c  basop.h  cod_cng.c  cod_cng.h  coder.c  coder.h  cst_lbc.h  dec_cng.c  dec_cng.h  decod.c  decod.h  exc_lbc.c  exc_lbc.h  lbccodec.h  lpc.c  lpc.h  lsp.c  lsp.h  tab_lbc.c  tab_lbc.h  tame.c  tame.h  typedef.h  util_cng.c  util_cng.h  util_lbc.c  util_lbc.h  vad.c  vad.h
unsupported/: Dockerfile  build.sh  g72x-build.sh  mkast.sh  try.sh
unsupported/build-32bit/: Dockerfile  build.sh  try.sh
unsupported/build-64bit/: Dockerfile  build.sh  try.sh
www/: index.html
